# lcd-daemon

./: .gitignore  Makefile.am  README.md  alloc.c  alloc.h  alloc_re.c  byte.h  byte_chr.c  byte_copy.c  byte_cr.c  conf-email  configure.ac  create_debian  create_rpm  create_service  default.configure  env.h  envread.c  error.c  error.h  error_str.c  gen_alloc.h  gen_allocdefs.h  getEnvConfig.c  getEnvConfig.h  getln.c  getln.h  getln2.c  lcd-daemon.8  lcd-daemon.c  lcd-daemon.spec.in  lcdDaemon.8  lcdDaemon.c  lcdPrint.c  lcdPrint.h  notify-daemon.8  notify-daemon.c  pilcd.1  pilcd.c  pilcd.h  (+27 more)
.github/workflows/: lcd-daemon-c-cpp.yml
debian/: .gitignore  Makefile  changelog  control.in  copyright.in  lcd-daemon.dirs  lcd-daemon.dsc.in  lcd-daemon.install  postinst  preinst  prerm  rules
doc/: ChangeLog
examples/: host_info
